Photoshop renders thumbnails now. Support for undo in photoshop.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -82,6 +82,12 @@
 									<div ng-switch-when="http://w3id.org/art/terms/1.0/Redo">
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Redo
 									</div>
+									<div ng-switch-when="http://w3id.org/art/terms/1.0/Save">
+										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Save
+									</div>
+									<div ng-switch-when="http://w3id.org/art/terms/1.0/SaveAs">
+										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Save as
+									</div>
 									<div ng-switch-when="http://www.w3.org/ns/prov#Invalidation">
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{influence.description}}
 									</div>
