Properly rendering multiple canvases in Journal. Bugfix: Color extraction working again.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -89,7 +89,7 @@
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Save as
 									</div>
 									<div ng-switch-when="http://www.w3.org/ns/prov#Invalidation">
-										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{influence.description}}
+										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Delete
 									</div>
 									<div ng-switch-default>
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{influence.description}}
