--- a/Artivity.Apid.Modules.Journal/app/css/roboto.css
+++ b/Artivity.Apid.Modules.Journal/app/css/roboto.css
@@ -1,76 +1,76 @@
 /* BEGIN Light */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Light/Roboto-Light.woff2?v=1.1.0") format("woff2"), url("../fonts/Light/Roboto-Light.woff?v=1.1.0") format("woff"), url("../fonts/Light/Roboto-Light.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Light.woff2") format("woff2"), url("../fonts/Roboto-Light.woff") format("woff"), url("../fonts/Roboto-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal; }
 /* END Light */
 /* BEGIN Light Italic */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/LightItalic/Roboto-LightItalic.woff2?v=1.1.0") format("woff2"), url("../fonts/LightItalic/Roboto-LightItalic.woff?v=1.1.0") format("woff"), url("../fonts/LightItalic/Roboto-LightItalic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-LightItalic.woff2") format("woff2"), url("../fonts/Roboto-LightItalic.woff") format("woff"), url("../fonts/Roboto-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic; }
 /* END Light Italic */
 /* BEGIN Regular */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Regular/Roboto-Regular.woff2?v=1.1.0") format("woff2"), url("../fonts/Regular/Roboto-Regular.woff?v=1.1.0") format("woff"), url("../fonts/Regular/Roboto-Regular.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal; }
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Regular/Roboto-Regular.woff2?v=1.1.0") format("woff2"), url("../fonts/Regular/Roboto-Regular.woff?v=1.1.0") format("woff"), url("../fonts/Regular/Roboto-Regular.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 /* END Regular */
 /* BEGIN Italic */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Italic/Roboto-Italic.woff2?v=1.1.0") format("woff2"), url("../fonts/Italic/Roboto-Italic.woff?v=1.1.0") format("woff"), url("../fonts/Italic/Roboto-Italic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Italic.woff2") format("woff2"), url("../fonts/Roboto-Italic.woff") format("woff"), url("../fonts/Roboto-Italic.ttf") format("truetype");
   font-weight: 400;
   font-style: italic; }
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Italic/Roboto-Italic.woff2?v=1.1.0") format("woff2"), url("../fonts/Italic/Roboto-Italic.woff?v=1.1.0") format("woff"), url("../fonts/Italic/Roboto-Italic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Italic.woff2") format("woff2"), url("../fonts/Roboto-Italic.woff") format("woff"), url("../fonts/Roboto-Italic.ttf") format("truetype");
   font-weight: normal;
   font-style: italic; }
 /* END Italic */
 /* BEGIN Medium */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Medium/Roboto-Medium.woff2?v=1.1.0") format("woff2"), url("../fonts/Medium/Roboto-Medium.woff?v=1.1.0") format("woff"), url("../fonts/Medium/Roboto-Medium.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff"), url("../fonts/Roboto-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal; }
 /* END Medium */
 /* BEGIN Medium Italic */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/MediumItalic/Roboto-MediumItalic.woff2?v=1.1.0") format("woff2"), url("../fonts/MediumItalic/Roboto-MediumItalic.woff?v=1.1.0") format("woff"), url("../fonts/MediumItalic/Roboto-MediumItalic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/MediumItalic/Roboto-MediumItalic.woff2") format("woff2"), url("../fonts/MediumItalic/Roboto-MediumItalic.woff") format("woff"), url("../fonts/MediumItalic/Roboto-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic; }
 /* END Medium Italic */
 /* BEGIN Bold */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Bold/Roboto-Bold.woff2?v=1.1.0") format("woff2"), url("../fonts/Bold/Roboto-Bold.woff?v=1.1.0") format("woff"), url("../fonts/Bold/Roboto-Bold.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal; }
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/Bold/Roboto-Bold.woff2?v=1.1.0") format("woff2"), url("../fonts/Bold/Roboto-Bold.woff?v=1.1.0") format("woff"), url("../fonts/Bold/Roboto-Bold.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal; }
 /* END Bold */
 /* BEGIN Bold Italic */
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/BoldItalic/Roboto-BoldItalic.woff2?v=1.1.0") format("woff2"), url("../fonts/BoldItalic/Roboto-BoldItalic.woff?v=1.1.0") format("woff"), url("../fonts/BoldItalic/Roboto-BoldItalic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-BoldItalic.woff2") format("woff2"), url("../fonts/Roboto-BoldItalic.woff") format("woff"), url("../fonts/Roboto-BoldItalic.ttf") format("truetype");
   font-weight: 700;
   font-style: italic; }
 @font-face {
   font-family: Roboto;
-  src: url("../fonts/BoldItalic/Roboto-BoldItalic.woff2?v=1.1.0") format("woff2"), url("../fonts/BoldItalic/Roboto-BoldItalic.woff?v=1.1.0") format("woff"), url("../fonts/BoldItalic/Roboto-BoldItalic.ttf?v=1.1.0") format("truetype");
+  src: url("../fonts/Roboto-BoldItalic.woff2") format("woff2"), url("../fonts/Roboto-BoldItalic.woff") format("woff"), url("../fonts/Roboto-BoldItalic.ttf") format("truetype");
   font-weight: bold;
   font-style: italic; }
 /* END Bold Italic */
