--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -2,15 +2,17 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
-				<a class="btn" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
+				<a class="btn btn-header" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
 			</div>
 
 			<div class="col">
-				<div class="icn" style="background-color: {{agent.ColourCode}}; width: 30px; height: 30px; position: relative; top: 10px; left: 5px;"></div>
+				<div class="icn" style="background-color: {{agentColor}}; width: 32px; height: 32px; margin-top: 10px; margin-left: 5px;">
+					<img src="{{agentIconUrl}}" width="32" height="32"/>
+				</div>
 			</div>
 
 			<div class="col expand">
-				<h5 class="title">{{fileName}}</h5>
+				<h5 class="title">{{file.label}}</h5>
 			</div>
 		</div>
 	</div>
@@ -18,8 +20,6 @@
 		<div class="content text-center">
 			<div id="canvas-header">
 				<label>{{ getFormattedDate(selectedInfluence.time) }}, {{ getFormattedTime(selectedInfluence.time) }}</label>
-
-				<label class="pull-right">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</label>
 			</div>
 
 			<canvas id="canvas" class="buffer" style="margin: 1px;" loaded="updateCanvas()"></canvas>
@@ -33,8 +33,6 @@
 				});
 
 				function updateCanvas() {
-					console.log("Updating canvas..");
-
 					var buffer = document.getElementsByClassName("buffer")[0];
 
 					// To prevent flickering, store the current context before setting the size.
@@ -68,14 +66,15 @@
 		<div class="sidebar left">
 			<ul class="nav nav-tabs tablist" id="tabs" role="tablist">
 				<li role="presentation" class="active"><a data-target="#history" role="tab" data-toggle="tab">History</a></li>
+				<li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab">Comments</a></li>
 			</ul>
 
 			<div class="tab-content">
 				<div role="tabpanel" class="tab-pane fade active in" id="history">
 					<ul class="list-unstyled">
 						<li ng-repeat="influence in influences" ng-class="{selected: influence == selectedInfluence}">
-							<a title="{{influence.time}}" ng-click="selectInfluence(influence)" ng-mouseenter="previewInfluence(influence)" style="padding: 3px;">
-								<div ng-switch on="influence.type">
+							<a title="{{influence.time}}" ng-click="selectInfluence(influence)" ng-mouseenter="previewInfluence(influence)" style="padding: 0 3px;">
+								<div class="pull-left" ng-switch on="influence.type">
 									<div ng-switch-when="http://w3id.org/art/terms/1.0/Undo">
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> Undo
 									</div>
@@ -95,16 +94,22 @@
 										<i class="zmdi zmdi-hc-fw icn icn-transparent"></i> {{influence.description}}
 									</div>
 								</div>
+
+								<label class="pull-right small">{{getFormattedTimeFromNow(influence.time)}}</label>
+
+								<div class="clearfix"></div>
 							</a>
 						</li>
 					</ul>
+				</div>
+				<div role="tabpanel" class="tab-pane fade" id="comments">
+					<div class="under-construction"></div>
 				</div>
 			</div>
 		</div>
 		<div class="sidebar right">
 			<ul class="nav nav-tabs tablist" id="tabs" role="tablist">
 				<li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab">Stats</a></li>
-				<li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab">Comments</a></li>
 			</ul>
 
 			<div class="tab-content">
@@ -179,9 +184,6 @@
 							<div style="width: 30px; height: 30px; margin-right: 5px; margin-bottom: 5px; float: left; background: rgb({{color[0]}},{{color[1]}},{{color[2]}});"></div>
 						</li>
 					</ul>
-				</div>
-				<div role="tabpanel" class="tab-pane fade" id="comments">
-					<div class="under-construction"></div>
 				</div>
 			</div>
 		</div>
