--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -65,8 +65,8 @@
 		</div>
 		<div class="sidebar left">
 			<ul class="nav nav-tabs tablist" id="tabs" role="tablist">
-				<li role="presentation" class="active"><a data-target="#history" role="tab" data-toggle="tab">History</a></li>
-				<li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab">Comments</a></li>
+				<li role="presentation" class="active"><a data-target="#history" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw"></i> History</a></li>
+				<li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw"></i> Comments</a></li>
 			</ul>
 
 			<div class="tab-content">
