--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -31,7 +31,7 @@
 	<div id="header">
 		<div class="row">
 			<div class="col">
-				<button class="btn btn-default btn-icn btn-header" ng-click="submit()"><i class="zmdi zmdi-hc-fw"></i></button>
+				<button class="btn btn-default btn-icn btn-header" ng-click="submit()"><i class="zmdi zmdi-hc-fw"></i></button>
 			</div>
 
 			<div class="col expand">
@@ -44,19 +44,19 @@
 		</div>
 	</div>
 
-	<div id="body">
-		<ul class="nav nav-pills nav-stacked col-md-3" role="tablist" id="tabs">
+	<div id="body" style="width: 650px; margin-left: auto; margin-right: auto;">
+		<ul class="nav nav-pills text-center" role="tablist" id="tabs">
 			<li role="presentation" class="active"><a data-target="#user-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Profile</a></li>
 			<li role="presentation"><a data-target="#applications-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Apps</a></li>
 			<li role="presentation"><a data-target="#accounts-panel" role="tab" data-toggle="tab"><i class="zmdi zmdi-hc-fw zdmi-lg"></i> Accounts</a></li>
 		</ul>
 
-		<div class="tab-content col-md-9">
+		<div class="tab-content" style="float: left; width: 600px;">
 			<!-- PROFILE -->
 			<div role="tabpanel" class="tab-pane fade active in" id="user-panel">
 				<form name="userForm" ng-controller="UserSettingsController as userSettings" ng-submit="submit()">
 					<div class="row">
-						<div class="col-md-6">
+						<div class="col-md-12">
 							<!-- USER -->
 							<div class="form-group">
 								<input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
@@ -65,7 +65,7 @@
 									<img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
 								</button>
 
-								<label for="photo-btn" style="margin: 10px 0">Click to select your profile picture.</label>
+								<label for="photo-btn" style="margin: 10px 0"><i class="zmdi zmdi-hc-fw"></i> Click to select your profile picture.</label>
 
 								<script type="text/javascript">
 									$('#photo-btn').on('click', function () {
@@ -96,28 +96,43 @@
 			</div>
 			<!-- AGENTS -->
 			<div role="tabpanel" class="tab-pane fade" id="applications-panel">
-				<form name="agentForm" ng-controller="AgentSettingsController as agentSettings" style="max-width: 800px;">
+				<form name="agentForm" ng-controller="AgentSettingsController as agentSettings">
 
-					<div class="text-right">
-						<button class="btn btn-default btn-icn" style="margin: 10px 0;"><i class="zmdi zmdi-hc-fw"></i></button>
+					<div>
+						<button class="btn btn-default btn-icn pull-right" style="margin: 0 -5px 15px 0;" ng-click="reload()"><i class="zmdi zmdi-hc-fw"></i></button>
+
+						<div class="clearfix"></div>
+
+						<div class="msg-error animate-show" ng-show="hasError" style="margin: 0 -5px 15px -5px;">
+							<h5>{{errorType}}</h5>
+							<label>{{errorMessage}}</label>
+						</div>
 					</div>
 
 					<ul class="list-view">
 						<li ng-repeat="agent in agents">
 							<div class="row" style="padding: 15px 10px; margin-bottom: 10px; border-top: 1px solid #333333;">
-								<div class="pull-left" style="background-color: {{agent.color}};">
-									<img ng-src="{{agent.iconSrc}}" width="48" height="48" />
+								<div class="pull-right" style="margin-top: 2px;">
+									<input type="checkbox" ng-model="agent.pluginInstalled" ng-change="toggleInstall(agent)" data-size="small" bootstrap-switch/>
 								</div>
 
-								<div class="pull-left" style="padding-left: 15px;">
-									<h4 style="margin-top: 0px">{{agent.name}}</h4>
-									<label>Software version: {{agent.softwareVersion}}</label>
-									<br>
-									<label>Plugin version: {{agent.pluginVersion}}</label>
-								</div>
+								<div ng-class="{disabled: !agent.pluginInstalled}" style="margin-right: 90px;">
+									<div class="pull-left">
+										<img ng-src="{{agent.iconSrc}}" width="48" height="48" />
+									</div>
 
-								<div class="pull-right">
-									<input type="checkbox" ng-model="agent.installed" ng-change="toggleInstall(agent)" data-size="small" bootstrap-switch/>
+									<div class="pull-left" style="padding-left: 15px;">
+										<h4 style="margin-top: 0px">{{agent.name}}</h4>
+										<label>Software version: {{agent.softwareVersion}}</label>
+										<br>
+										<label>Plugin version: {{agent.pluginVersion}}</label>
+									</div>
+
+									<div class="pull-right">
+										<ng-color-picker selected-color="agent.color"></ng-color-picker>
+									</div>
+
+									<div class="clearfix"></div>
 								</div>
 
 								<div class="clearfix"></div>
@@ -158,5 +173,8 @@
 				$(this).tab('show');
 			});
 		</script>
+	</div>
+
+	<div id="footer">
 	</div>
 </div>
