--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -29,6 +29,15 @@ body {
 	height: 100%; // Make the body fill the browser window.
 }
 
+h3 {
+	font-size: 1.4em;
+}
+
+h3,
+h4 {
+	color: $labelColor;
+}
+
 body {
 	font-family: $textFont;
 	color: $textColor;
@@ -45,6 +54,10 @@ a {
 a:hover {
 	color: inherit;
 	text-decoration: none;
+}
+
+.text-center {
+	text-align: center;
 }
 
 .pull-center {
@@ -148,6 +161,10 @@ button:hover,
 .modal-header,
 .modal-footer {
 	border: none;
+}
+
+.circular {
+	border-radius: 50%;
 }
 
 .nav-pills {
@@ -572,8 +589,6 @@ h4 {
 }
 
 .img-avatar {
-	background: url('../img/placeholder-avatar.png') center center no-repeat;
-	background-size: cover;
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
