--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -61,7 +61,7 @@
 							<div class="form-group">
 								<input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)" />
 
-								<button id="photo-btn" class="btn img-avatar img-avatar-lg">
+								<button id="photo-btn" class="btn img-avatar img-avatar-lg circular">
 									<img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
 								</button>
 
